Change font size of paragraph from px to %

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body style="background-color:violet;">
     <h1 style="font-size:65px;">This is a normal heading</h1>
-    <p style="font-size:25px;">This is<br>not a heading<br>it's a paragraph<br>with break lines</p> 
+    <p style="font-size:105%;">This is<br>not a heading<br>it's a paragraph<br>with break lines</p> 
   </body>
 </html>
