added Pre-existing text, Horizontal line breaks and Center aligned text?, different fonts,

--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body style="background-color:violet;">
+    <i>
+    <sup>
+    <th>
     <h1 style="font-size:65px;">This is a normal heading</h1>
     <p style="font-size:105%;">This is<br>not a heading<br>it's a paragraph<br>with break lines</p> 
+    <hr>
+    <p>There was a horizontal line break between these paragraphs</p>
+    <hr>
+    <pre>
+    I've been working on the railroad 
+    All the live long day 
+    I've been working on the railroad 
+    Just to pass the time away
+    </pre>
+    <table style="width:100%">
+      <tr>
+        <th>Center</th>
+        <th>Aligned</th>
+        <th>Text</th>
+      </tr>
+      <td>is</td>
+      <td>here</td>
+      <td>right?</td>
+      </table>
   </body>
 </html>
